--- a/final/package.json
+++ b/final/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "navi": "^0.14.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-navi": "^0.14.4",
     "react-request-hook": "^2.1.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
