--- a/final/package.json
+++ b/final/package.json
@@ -21,7 +21,7 @@
     "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "start:client": "react-scripts start",
     "start:server": "npx json-server --watch server/db.json --port 4000 --routes server/routes.json",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH='./express/build' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
